# Robot2018

./: .cproject  .gitignore  .gitmodules  .project  AutoInfo.txt  CMakeLists.txt  OIInfo.txt  build.sh  deploy.sh
Debug/: FRCUserProgram
Lib/PathDrive/: PathBuilder.h  RobotSim.h  draw.html
PathDrive/: Bezier.h  Makefile  Motion.h  PathNode.h  PathPlan.h  PathSegment.h  Point2.h  Test.cpp  app.js  data.js
src/: CommandBase.cpp  CommandBase.h  OI.cpp  OI.h  PIDPreferences.cpp  PIDPreferences.h  PathfinderExample.cpp  Robot.cpp  RobotMap.h
src/Commands/: Info.txt
src/Commands/Arm/: ArmDefault.cpp  HighForwardSetpoint.cpp  HighReverseSetpoint.cpp  HighSetpoint.cpp  HighSetpoint.h  IntakeDown.cpp  LowSetpoint.cpp  LowSetpoint.h  PIDJoystickSwitch.cpp  ResetArmEncoder.h  ScoreScaleLow.cpp  ScoreScaleLow.h  ToggleAlternate.cpp  ToggleGrab.h  WaitForCube.cpp  WaitForCube.h  WaitForPosition.cpp  WaitForPosition.h
src/Commands/Auto/: AutoCreepToScale.h  AutoDoNothing.cpp  AutoDoNothing.h  AutoDriveForward.cpp  AutoDriveForward.h  AutoDriveTurn.cpp  AutoDriveTurn.h  AutoMiddleToSwitch.cpp  AutoRightToScale.cpp  AutoRightToScale.h  AutoScoreScaleFromCenter.cpp  AutoScoreScaleSwitchFromSide.cpp  AutoTemplate.cpp  (+8 more)
src/CustomSensors/: ADIS16448_IMU.cpp  ADIS16448_IMU.h  NonLoopingVexEncoder.h  VexEncoder.cpp
src/Subsystems/: ArmSubsystem.cpp  ArmSubsystem.h  DriveSubsystem.cpp  DriveSubsystem.h  Info.txt  IntakeSubsystem.cpp  IntakeSubsystem.h  RobotInfo.cpp  RobotInfo.h
src/Test/: NetworkToSerial.cpp
src/Utils/: MotionProfile.h  PIDPreferences.cpp  PIDPreferences.h
(+83 files in other folders)
